For more information, check the README.md in <http://github.com/i3visio/osrframework>. For the ToDo list and the known issues, scroll down till the end of this file.

0.10.0b, 2016/01/24 -- New release with several fixes. 
- Fix to issues linked to mailfy: #56, #57, #58 and #60.
- Fix to issue #53: adding tabulate dependency to the requirements.txt file.
- Fix to issue #52: fixed a crash when launching -p wikipedia only in usufy.py and some false positives associated to the platform.
- Different fixes linked to issues #33 (jamiiforums), #43 (qq), #42 (buzznet) and #44 (pixls substitutes rawtherapee).
- Bringing back forosperu, hellboundhackers, ivoox and linkedin.
- A fix has been introduced in the --fuzz option of usufy.py so as not to stop when a matching pattern has been found.
- Update in the README file.

0.9.14, 2016/01/21 -- Mitigation of several fixes. 
- Fix to issues #46, #47, #48, #49. Mitigating #40, #42, #43, #44, 45.
- Modification of the Welcome banner for the different utilities. Back to normal.

0.9.13, 2015/11/26 -- Modifications for the Cybercamp. 
- Modification of the Welcome banner for the different utilities.
- Changed the default extension to .xls as stated in the help.
- Added a new phonefy platform: infotelefonica.es.
- Modified the name of the listaspam platform from "listspam" to "listaspam".

0.9.12, 2015/11/18 -- Addition of Periscope. 
- Addition of a wrapper for Periscope.
- Imported in the setup.py the local osrframework folder to grab the current version number.
- Fixed some errors in the messages displayed.

0.9.11, 2015/11/13 -- Addition of a new searchfy platform to look for PGP keys, as well as new platforms for mailfy.
- Added the search in the PGP public key repository by the MIT.
- Fixed a change in garage4hackers platform.
- Added new wikipediafr and wikipediapt user search.
- The platform thehoodup now waits for credentials.
- Added the sina.com email provider to mailfy.py.