@@ -27,3 +27,4 @@ _*sh
 *gml
 *png
 *.gml_*
+fuzz.txt
